--- a/style.css
+++ b/style.css
@@ -1,20 +1,82 @@
 body, html {
     height: 100%;
     margin: 0;
+  }/*full screen bg*/
+
+  
+  *{
+    box-sizing: border-box;
   }
 
-nav{
-  position: fixed;
-}
-ul {
-    list-style-type: none;
+
+  body{
     margin: 0;
     padding: 0;
+  }
+
+  .navbar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #347AB8;
+    color: white;
+  }
+
+  .title{
+    font-size: 1.5rem;
+    margin: 0.5rem;
+  }
+
+  .navbar ul{
+    margin:0;
+    padding: 0;
+    display: flex;
+  }
+
+  .navbar-links li{
+    list-style: none;
+    font-size: 1.05rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .internal-links{
+    padding-top: 5px;
+  }
+
+  .navbar-links li a{
+    text-decoration: none;
+    color:white;
+    padding: 1rem;
+    display: block;
+  }
+
+  .navbar-links li:hover{
+    background-color: #53a0e4;
+
+  }
+
+
+
+/*
+ul {
+    list-style-type: none;
+    margin: 0px;
+
     overflow: hidden;
     background-color: #347AB8;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 100%;
+  }
+
+  li {
+    float: right;
+    display: block;
   }
   
-  li {
+  #webname{
     float: left;
   }
   
@@ -26,11 +88,20 @@ ul {
     text-decoration: none;
   }
   
-  li a:hover {
+  .navbar a:hover {
     background-color: #fff;
     color:#347AB8;
   }
+*/
+  .logo{
+    border-radius: 50%;
+    height: 2rem;
+    width: 2rem;
+    margin: 0;
+    padding: 0;
+  }
 
+  
 #homepage{
     color: white;
     background-image: url("Bg_1.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
@@ -75,21 +146,218 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-#about-1 > p{
+#about-1 p{
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 20px;
+  padding: 0 10%;
+  margin: 10px;
 }
 
-#about-1 > h4{
+#about-1 h4{
   font-family: Harlow Solid;
-  font-size: 70px;
+  font-size: 50px;
+  margin: 15px;
+  padding:0;
 }
 
 #description{
   background-color: rgba(0,0,0,0.5);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.selfie-1{
+  max-width: 200%;
+  height: auto;
+  margin-top: 100px;
+  margin-left: 20px;
+}
+  
+
+
+#description{
+  margin: 50px;
+  margin-top: 100px;
+  margin-left: 220px;
+}
+
+
+#description h4{
+  text-align: center;
+}
+
+#about-2{
+  color: white;
+  background-image: url("Bg_3.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
+  background-blend-mode: overlay;
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-template-areas: "testimonals skills schools";
+  font-family: Monotype Corsiva;
+}
+
+#about-2 .sections{
+  background-color: #514C4C;
+  margin: 20px;
+  margin-top: 100px;
+  padding: 0 5%;
+  color:#D5D5D5;
+}
+
+
+#about-2 div:hover{
+  color: white;
+}
+
+#testimonals{
+  grid-area: "testimonals";
+}
+
+#skills{
+  grid-area: "skills";
+}
+
+#schools{
+  grid-area: "schools";
+}
+
+#about-2 h4{
+  font-size: 50px;
+  text-align: center;
+  padding: 20px 0;
+  margin:0;
+  /*
+  margin:10px;
+  */
+}
+
+#about-2 p{
+  font-size: 20px;
+  padding: 0;
+  /*
+  margin:10px;
+  */
+}
+
+#skills img{
+  max-height: 60px;
+  width: auto;
+  padding: 0 20px;
+  margin-top: 0px;
+}
+
+#skills{
+  display: grid;
+  grid-template-areas: "0 0 0"
+                       "1 2 3"
+                       "4 5 6"
+                       "7 8 9";
+  grid-gap: 0 0;
+}
+
+#skills div p{
+  text-align: center;
+  padding:0;
+  margin:0;
+}
+
+
+#header2{
+  grid-area: "0";
+}
+
+#html5{
+  grid-area: "1";
+}
+
+#css{
+  grid-area: "2";
+}
+
+#js{
+  grid-area: "3";
+}
+
+#sql{
+  grid-area: "4";
+}
+
+#cs{
+  grid-area: "5";
+}
+
+#py{
+  grid-area: "6";
+}
+
+#bi{
+  grid-area: "7";
+}
+
+#ai{
+  grid-area: "8";
+}
+
+#ps{
+  grid-area: "9";
+}
+
+#schools{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
+}
+
+#schools p{
+  margin-top: 0px;
+}
+
+#schools img{
+  max-width: 80px;
+  height: auto;
+  border-radius: 50%;
+}
+
+#schools h4{
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+#hws img{
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+#hws div{
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+
+#yyss img{  
+  grid-row-start: 2;
+  grid-column-end: 2
+}
+
+#yyss p{
+  grid-row-start: 2;
+  grid-column-end: 4;
+}
+
+#np img{
+  grid-column-start: 1;
+  grid-column-end: 2
+}
+
+#np p{
+  grid-column-start: 2;
+  grid-column-end: 4;
 }
