--- a/style.css
+++ b/style.css
@@ -1,3 +1,348 @@
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10+.
+ */
+
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+
+[hidden] {
+  display: none;
+}
+
 body, html {
     height: 100%;
     margin: 0;
@@ -24,6 +369,7 @@ body, html {
     align-items: center;
     background-color: #347AB8;
     color: white;
+    transition: top 0.3s;
   }
 
   .title{
@@ -56,10 +402,13 @@ body, html {
 
   .navbar-links li:hover{
     background-color: #53a0e4;
-
   }
 
-
+  /*
+  .navbar-links li:{
+    border-bottom: white solid 3px;
+  }
+*/
 
 /*
 ul {
@@ -105,11 +454,12 @@ ul {
   
 #homepage{
     color: white;
-    background-image: url("Bg_1.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
+    background-image: url("pics/Bg_1.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
     background-blend-mode: overlay;
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -140,7 +490,7 @@ ul {
 
 #about-1{
   color: white;
-  background-image: url("Bg_2.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
+  background-image: url("pics/Bg_2.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
   background-blend-mode: overlay;
   height: 100%; 
   background-position: center;
@@ -196,7 +546,7 @@ ul {
 
 #about-2{
   color: white;
-  background-image: url("Bg_3.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
+  background-image: url("pics/Bg_3.jpg"), linear-gradient(rgba(0,0,0,0.36),rgba(0,0,0,0.36));
   background-blend-mode: overlay;
   height: 100%; 
   background-position: center;
@@ -220,10 +570,16 @@ ul {
   color: white;
 }
 
-#testimonals{
+/* #testimonals{
   grid-area: "testimonals";
-}
+} */
 
+/* #testimonal #next{
+  display: block;
+  float: right;
+} */
+
+/*
 #skills{
   grid-area: "skills";
 }
@@ -231,6 +587,7 @@ ul {
 #schools{
   grid-area: "schools";
 }
+*/
 
 #about-2 h4{
   font-size: 50px;
@@ -272,7 +629,7 @@ ul {
   margin:0;
 }
 
-
+/*
 #header2{
   grid-area: "0";
 }
@@ -312,7 +669,7 @@ ul {
 #ps{
   grid-area: "9";
 }
-
+*/
 #schools{
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -364,11 +721,12 @@ ul {
 }
 
 #work {
-  background-image: url("Bg_4.jpg"), linear-gradient(rgba(255, 255, 255, 0.5),rgba(255,255,255,0.5));
+  background-image: url("pics/Bg_4.jpg"), linear-gradient(rgba(255, 255, 255, 0.5),rgba(255,255,255,0.5));
   background-blend-mode: overlay;
   height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -376,7 +734,7 @@ ul {
 }
 
 #projects{
-  grid-area: "title";
+  /* grid-area: "title"; */
   font-size: 60px;
   font-family: Harlow Solid;
   color: #C79E56;
@@ -393,7 +751,11 @@ ul {
   margin-top: -30px;
   display: block;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 2px;
+  border-radius: 1px;
+}
+
+.projects img:hover{
+  margin-left: 120px;
 }
 
 .projects p{
@@ -422,12 +784,72 @@ ul {
   display: grid;
   grid-template-columns: 1fr 1px 1fr;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 100px 20px;
+  padding: 80px 20px;
   font-size: 30px;
 }
 
 #message #form{
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+#form{
+  margin-top: -20px;
+}
+
+.field{
+  font-size: 15px;
+  margin: 0;
+  padding: 0px 10px;
+}
+
+#message > h4{
+  padding: 0px 10px;
+}
+
+#email{
+  width: 400px;
+}
+
+#submitbtn{
+  margin-left: 10px;
+  font-size: medium;
+}
+
+/* .field{
+  padding: 5px;
+} */
+
+#info > h4{
+  padding: 5px 40px;
+}
+
+#info > ul{
+  list-style: none;
+  text-align: start;
+  font-size: 20px;
+}
+
+#email-me{
+  margin-left:40px;
+  margin-right: auto;
+  font-size: medium;
+}
+
+/* #contact {
+  background-color: #E4E4E4;
+  background-size: cover;
+  block-size: inherit;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  padding-top: 60px;
+  overflow: hidden;
+}
+
+#message #form{
+  display: grid;
+  grid-area: 1fr 1px 1fr;
   flex-wrap: wrap;
   flex-direction: row;
 }
@@ -439,7 +861,8 @@ ul {
 }
 
 #submitbtn{
-  margin-left: 10px;
+  margin: 0px 0px;
+  font-size: medium;
 }
 
 .field{
@@ -460,4 +883,99 @@ ul {
 #email-me{
   margin-left:40px;
   margin-right: auto;
+  font-size: medium;
+}
+
+#contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  font-size: small;
+  align-items: center ;
+}
+
+.row > div {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  align-items: center;
+}
+
+.row > div p {
+  margin-right: 15px;
+  line-height: normal;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#name, #phone {
+  height: 28px;
+  width: 150px;
+}
+
+#email {
+  height: 28px;
+  width:350px;
+}
+
+#info {
+  display: flex;
+  flex-direction: column;
+}
+
+#submitbtn{
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 1100px) {
+  #contact {
+    flex-direction: column;
+    background-repeat: repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  textarea {
+    width: 100%;
+  }
+} */
+
+footer{
+  background-color: #424242;
+  padding: 30px 20px;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer > ul{
+  margin:0;
+  padding: 0;
+  display: flex;
+}
+
+footer ul > li{
+  list-style: none;
+  font-size: 1.05rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0 20px;
+}
+
+footer a > img{
+  max-width: 30px;
+  height: auto;
+  border-radius: 5%;
 }
